--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "TextSummarization-LangChain"]
 	path = TextSummarization-LangChain
 	url = https://github.com/MariahFerns/TextSummarization-LangChain.git
+[submodule "RAGChatbot-web-Cohere_CommandR"]
+	path = RAGChatbot-web-Cohere_CommandR
+	url = https://github.com/MariahFerns/RAGChatbot-web-Cohere_CommandR.git
