Add repo RAGChatbot-url-Ollama-MistralAI

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "StockMarketAnalysis-AIAgents-Autogen"]
 	path = StockMarketAnalysis-AIAgents-Autogen
 	url = https://github.com/MariahFerns/StockMarketAnalysis-AIAgents-Autogen.git
+[submodule "RAGChatbot-url-Ollama-MistralAI"]
+	path = RAGChatbot-url-Ollama-MistralAI
+	url = https://github.com/MariahFerns/RAGChatbot-url-Ollama-MistralAI.git
