add AI_Education submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "RAGChatbot-url-Ollama-MistralAI"]
 	path = RAGChatbot-url-Ollama-MistralAI
 	url = https://github.com/MariahFerns/RAGChatbot-url-Ollama-MistralAI.git
+[submodule "AI_Education"]
+	path = AI_Education
+	url = https://github.com/MariahFerns/AI_Education.git
