--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "Agentic-AI"]
 	path = Agentic-AI
 	url = https://github.com/MariahFerns/Agentic-AI.git
+[submodule "Education_AI"]
+	path = Education_AI
+	url = https://github.com/MariahFerns/Education_AI.git
